--- a/CorkTraceApp/css/style.css
+++ b/CorkTraceApp/css/style.css
@@ -16,6 +16,28 @@
     }
 }
 
+.load
+{
+    background:url('../img/ajax-loader.gif') no-repeat center;
+} 
+
+.noborder{
+	border:none !important;
+}
+.envoi{
+
+	background-color: white;
+    font-size: 20px;
+    font-weight: bold;
+    height: 100%;
+    margin: 0 auto;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    z-index: 100;
+	padding-top:100px;
+
+}
 
 .conform{
 	color: #03FC04;
@@ -66,7 +88,6 @@ body{
 }
 .container{
 
-	position: relative;
 	height:1350px;
 }
 
@@ -78,15 +99,12 @@ body{
 	text-align:right !important;
 }
 
-.toujoursenbas{
-	position: absolute;
-	bottom: 10px;
+.piedpage{
     color: #666666;
     font-size: 10px;
-    left: 259px;
-    margin: 0 auto;
-    padding: 10px 0 0;
+    margin: 50px auto;
     text-align: center;
+	
 }
 
 .colorEnteteFact{
